--- a/01_Project_Twitter.ipynb
+++ b/01_Project_Twitter.ipynb
@@ -434,7 +434,7 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
     "# Create a vectorizer instance\n",
-    "vectorizer = ...\n"
+    "vectorizer = \n"
    ]
   },
   {
@@ -513,7 +513,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# X_test and y_test contains 20% of our data which we reserve for testing.\n",
-    "X_train, X_test, y_train, y_test = ..."
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
    ]
   },
   {
@@ -565,7 +565,7 @@
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "model = ..."
+    "model = RandomForestClassifier(n_estimators= 100, criterion=\"entropy\", random_state=42)"
    ]
   },
   {
@@ -592,10 +592,10 @@
     "import sklearn\n",
     "\n",
     "# Fit function adjusts weights according to data values so that better accuracy can be achieved. \n",
-    "model = ...\n",
+    "model = model.fit(X_train, y_train)\n",
     "\n",
     "# model.predict() : given a trained model, predict the label of a new set of data.\n",
-    "y_pred = ..."
+    "y_pred = model.predict(X_test)"
    ]
   },
   {
@@ -764,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
